# COMP4981-2024-Assignment1

./: CMakeLists.txt  files.txt  fullBuild.sh  fullBuildNoFlags.sh
.flags/clang/: warning_flags.txt
.flags/clang-17/: instrumentation_flags.txt  warning_flags.txt
.flags/gcc-13/: instrumentation_flags.txt  warning_flags.txt
html/: index.html
include/: HTTPRequest.h  fileTools.h  httpReponse.h  httpRequest.h  main2.h  server.h  stringTools.h
src/: HTTPRequest.c  client.c  fileTools.c  httpRequest.c  httpResponse.c  main.c  main2.c  server.c  sigintHandler.c  stringTools.c
